a1/brendan_gordon/TEST_PROGRAMS/invalidtype/Michael_Ho/invalid3.min
# Assignment of string to variable of type float

var a : float;

a = "This is a string";


